@@ -1,3 +1,5 @@
+/*	$NetBSD: infcodes.c,v 1.2 1996/09/13 00:30:11 cgd Exp $	*/
+
 /* infcodes.c -- process literals and length/distance pairs
  * Copyright (C) 1995-1996 Mark Adler
  * For conditions of distribution and use, see copyright notice in zlib.h 
